package ch.zhaw.pm3.loremipsum.common;

public enum OptionCategoryEnum {

    GENERATOR,
    OUTPUT;

}
